# triage_agent

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
activities/: github.py  package_diff.py  repo_config.py
api/: webhook.py
helpers/: comment_formatter.py  prompts.py
tests/: generate_fixtures.py  test_package_diff.py  test_repo_config.py  test_webhook.py  test_workflow_replay.py
tests/fixtures/: pr_action_green_automerge.json  pr_action_observe_only.json  pr_action_red_blocked.json  pr_action_yellow_human_approved.json  pr_action_yellow_human_rejected.json
workflows/: pr_action_workflow.py
